--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionArchivosMultimedia/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionArchivosMultimedia/editar.xhtml
@@ -22,35 +22,31 @@
                 <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
                     <p:outputLabel value="Esta ayuda sirve un monton"/>
                 </p:dialog>
-                <p:focus context="mod_p1"/>
+                <p:focus id="focus" context="mod_p1"/>
                 <p:panelGrid columns="4" class="Container100 Responsive" id="mod_p1">
                     <p:outputLabel for="mod_nombre"  value="Nombre: " class=" Responsive"></p:outputLabel>
-                    <p:inputText tabindex="1" id="mod_nombre" value="#{gestionArchivoMultimediaController.archivoModifica.arNombre}"></p:inputText>
+                    <p:inputText  tabindex="1" id="mod_nombre" value="#{gestionArchivoMultimediaController.archivoModifica.arNombre}" required="true" requiredMessage="Debe ingresar un nombre al archivo" maxlength="#{tamanioUtils.nombreArchivoMax}"></p:inputText>
                     <p:outputLabel for="mod_estado" value="Estado: " class=" Responsive"></p:outputLabel>
-                    <p:selectOneMenu id="mod_estado" class=" Responsive" value="#{gestionArchivoMultimediaController.archivoModifica.arEstado}">
-                        <f:selectItem itemValue ="D" itemLabel="Disponible"/>
-                        <f:selectItem itemValue="N" itemLabel="No Disponible"/>
+                    <p:selectOneMenu tabindex="2" id="mod_estado" class=" Responsive" value="#{gestionArchivoMultimediaController.archivoModifica.arEstado}">
+                        <f:selectItem itemValue ="A" itemLabel="Activo"/>
+                        <f:selectItem itemValue="P" itemLabel="Trabajando"/>
                     </p:selectOneMenu>
                     <p:outputLabel for="mod_tipo" value="Tipo: " class=" Responsive"></p:outputLabel>
-                    <p:selectOneMenu id="mod_tipo" class=" Responsive" 
-                                     value="#{gestionArchivoMultimediaController.archivoModifica.arTipo}" 
-                                     valueChangeListener="#{gestionArchivoMultimediaController.getFormatosSubidaModifica}">
-                        <f:selectItem itemValue ="A" itemLabel="Audio"/>
-                        <f:selectItem itemValue ="V" itemLabel="Video"/>
-                        <f:selectItem itemValue ="I" itemLabel="Imagen"/>
-                        <p:ajax event="valueChange" update="mod_archivo"/>
-                    </p:selectOneMenu>
+                    <p:outputLabel tabindex="3" id="mod_tipo" value="#{gestionArchivoMultimediaController.archivoModifica.tipoArchivo}"></p:outputLabel>
                     <p:outputLabel for="mod_archivo" value="Archivo: " class=" Responsive"></p:outputLabel>
                     <p:fileUpload id="mod_archivo" label="Buscar" cancelLabel="cancelar" fileUploadListener="#{gestionArchivoMultimediaController.getArchivoModifica}"
                                   uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="#{gestionArchivoMultimediaController.formatoArchivoModifica}" 
-                                  value="#{gestionArchivoMultimediaController.archivoSubidoModifica}">
+                                  value="#{gestionArchivoMultimediaController.archivoSubidoModifica}" sizeLimit="${gestionArchivoMultimediaController.tamanioArchivo}"
+                                  invalidSizeMessage="Archivo muy grande"
+                                  invalidFileMessage="Tipo de archivo no valido"
+                                  >
                     </p:fileUpload>
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
-                    <p:commandButton value="Guardar" action="#{gestionArchivoMultimediaController.guardarModifica()}" update="mod_p1" />
+                    <p:commandButton value="Guardar" action="#{gestionArchivoMultimediaController.guardarModifica()}" update="mod_p1" oncomplete="configurarEnterTab()" />
                     <p:commandButton value="Limpiar" immediate="true">
-                        <p:ajax update="mod_p1" resetValues="true" />
+                        <p:ajax update="mod_p1,focus" resetValues="true" />
                     </p:commandButton>
                     <p:commandButton value="Cancelar" immediate="true">
                         <p:ajax update="mod_p1" resetValues="true" listener="#{gestionArchivoMultimediaController.setIndexMenu(0)}"/>
