--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/editar.xhtml
@@ -23,16 +23,16 @@
                     <p:outputLabel value="Esta ayuda sirve un monton"/>
                 </p:dialog>
                 <p:panelGrid columns="2" id="p1">
-                    <p:outputLabel value="Nombre: "></p:outputLabel>
-                    <p:inputText value="#{gestionComponentesInteractivosController.modifica.scNombre}"></p:inputText>
-                    <p:outputLabel value="Descripción: "></p:outputLabel>
-                    <p:inputText value="#{gestionComponentesInteractivosController.modifica.scDescripcion}"></p:inputText>
-                    <p:outputLabel value="Tipo de Componente: "></p:outputLabel>
-                    <p:selectOneMenu value="#{gestionComponentesInteractivosController.tipoSuperComponModifica}">
+                    <p:outputLabel for="nombre" value="Nombre: "></p:outputLabel>
+                    <p:inputText id="nombre" value="#{gestionComponentesInteractivosController.modifica.scNombre}" maxlength="#{tamanioUtils.nombreSuperCompMax}"></p:inputText>
+                    <p:outputLabel for="descripcion" value="Descripción: "></p:outputLabel>
+                    <p:inputText id="descripcion" value="#{gestionComponentesInteractivosController.modifica.scDescripcion}" maxlength="#{tamanioUtils.descSuperCompMax}"></p:inputText>
+                    <p:outputLabel for="tipo" value="Tipo de Componente: "></p:outputLabel>
+                    <p:selectOneMenu id="tipo" value="#{gestionComponentesInteractivosController.tipoSuperComponModifica}">
                         <f:selectItems  itemValue="#{tipo.idTipoSuperCompon}" itemLabel="#{tipo.tscDescripcion}" value="#{gestionComponentesInteractivosController.listaTipo}" var="tipo"></f:selectItems>
                     </p:selectOneMenu>                        
-                    <p:outputLabel value="Estado: " class="Responsive"></p:outputLabel>
-                    <p:selectOneMenu value="#{gestionComponentesInteractivosController.modifica.scEstado}" >
+                    <p:outputLabel for="estado" value="Estado: " class="Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="estado" value="#{gestionComponentesInteractivosController.modifica.scEstado}" >
                         <f:selectItem itemValue="N" itemLabel="No disponible"></f:selectItem>
                         <f:selectItem itemValue="D" itemLabel="Disponible"></f:selectItem>
                     </p:selectOneMenu>
@@ -46,15 +46,15 @@
                     <p:commandButton value="Cancelar" immediate="true">
                         <p:ajax update="p1" resetValues="true" listener="#{gestionComponentesInteractivosController.setIndexMenu(0)}"/>
                     </p:commandButton>
-                    <div class="EmptyBox20"></div>
-                    <p:splitButton value="Otras Opciones" action="#">
-                        <p:menuitem value="Gestionar Secciones">    
+                    <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
+                    <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
+                        <p:menuitem value="Gestionar Docentes" >    
                         </p:menuitem>
-                        <p:menuitem value="Programación de clases">    
+                        <p:menuitem value="Gestionar Alumnos">    
                         </p:menuitem>
-                        <p:menuitem value="Gestionar Clases">
+                        <p:menuitem value="Gestionar Cursos">    
                         </p:menuitem>
-                    </p:splitButton>
+                    </p:tieredMenu> 
                 </div>
             </h:form>
         </p:panel>
