--- a/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/crear.xhtml
@@ -52,7 +52,7 @@
                     <p:outputLabel for="emailNuevo" value="Correo electrónico: " class=" Responsive"></p:outputLabel>
                     <p:inputText class="Container100" id="emailNuevo" type="email" value="#{gestionarDocentesController.docenteNuevo.dcCorreo}"></p:inputText>
                     <p:outputLabel for="telefonoNuevo" value="Teléfono: " class=" Responsive"></p:outputLabel>
-                    <p:inputMask class="Container100" id="telefonoNuevo" mask="9999-9999" value="#{gestionarDocentesController.docenteNuevo.dcTelefonoEm1}"  required="true" requiredMessage="Debe ingresar telÃ©fono"></p:inputMask>
+                    <p:inputMask class="Container100" id="telefonoNuevo" mask="9999-9999" value="#{gestionarDocentesController.docenteNuevo.dcTelefonoEm1}"  required="true" requiredMessage="Debe ingresar teléfono"></p:inputMask>
                     <p:outputLabel for="celularNuevo" value="Celular: " class=" Responsive"></p:outputLabel>
                     <p:inputMask class="Container100" id="celularNuevo" mask="9999-9999" value="#{gestionarDocentesController.docenteNuevo.dcTelefonoEm2}"></p:inputMask>
                     <p:outputLabel for="direccion" value="Dirección: " class=" Responsive"></p:outputLabel>
