--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteAlumnos/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteAlumnos/index.xhtml
@@ -22,9 +22,11 @@
             <p:panel>
                 <p:panelGrid columns="4">
                     <p:outputLabel for="anioDesde" value="Matriculado desde:"></p:outputLabel>
-                    <p:calendar id="anioDesde" value="#{rptAlumnosController.anioDesde}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha desde" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
+                    <p:calendar id="anioDesde" value="#{rptAlumnosController.anioDesde}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha desde" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true">
+                        <p:ajax event="dateSelect" update="anioHasta"></p:ajax>
+                    </p:calendar>
                     <p:outputLabel for="anioHasta" value="hasta:"></p:outputLabel>
-                    <p:calendar id="anioHasta" value="#{rptAlumnosController.anioHasta}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha hasta" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
+                    <p:calendar id="anioHasta" value="#{rptAlumnosController.anioHasta}" mindate="#{rptAlumnosController.anioDesde}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha hasta" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
                     <p:outputLabel for="grado" value="Grado: " class=" Responsive" ></p:outputLabel>
                     <p:selectOneMenu id="grado" filter="true" filterMatchMode="contains" value="#{rptAlumnosController.idGrado}" valueChangeListener="#{rptAlumnosController.getSeccionesGrado}">
                         <f:selectItem itemValue="0" itemLabel="Seleccionar todos"></f:selectItem>
